fixed bug where homefooter on landing page overlaps content when small screen size

--- a/css/home.css
+++ b/css/home.css
@@ -90,7 +90,6 @@ h4{
 	position: absolute;
 	bottom: 0px;
 	width: 100%;
-	margin-top: 100px;
 }
 
 .block{
@@ -166,6 +165,10 @@ h4{
 
 	.bio p{
 		margin-bottom: 50px;
+	}
+
+	.footer{
+		position: inherit;
 	}
 }
 
